fix: add flex-wrap

--- a/color-mixer/style.css
+++ b/color-mixer/style.css
@@ -20,11 +20,11 @@ header {
 }
 
 main {
-  background: #3c4f76;
   flex: auto;
 }
 form {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   flex-grow: 1;
   gap: 2rem;
